# exchange-rate

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
Currency/: Currency.py  __init__.py
Graph/: Graph.py
data/: all_currency_data.csv  selected_currency_data.csv
